# file-analyzer-mcp

./: README.md  pyproject.toml
src/file_analyzer_mcp/: password_analyzer.py  server.py
tests/: __init__.py  conftest.py  test_directory_scanning.py  test_entropy_analysis.py  test_error_handling.py  test_hash_calculation.py  test_magic_detection.py  test_mcp_tools.py  test_password_analyzer.py
