[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file-analyzer-mcp"
version = "0.1.0"
description = "File Type ID Tool - Magic Number analysis, hash calculation, and malware detection"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "python-magic>=0.4.27",
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
file-analyzer-mcp = "file_analyzer_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/file_analyzer_mcp"]
