[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file-analyzer-mcp"
version = "0.1.0"
description = "File Type ID Tool - Magic Number analysis, hash calculation, and malware detection"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "python-magic>=0.4.27",
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]
dev = [
    "file-analyzer-mcp[test]",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
file-analyzer-mcp = "file_analyzer_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/file_analyzer_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/file_analyzer_mcp"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
